Update thank you page

--- a/_layouts/base-EN.html
+++ b/_layouts/base-EN.html
@@ -40,7 +40,11 @@
   
     {{ content }}
 
+    {% if page.title != "thanks" %}
+
     {% include mailchimp-en.html %}
+
+    {% endif %}
   
   </div>
   
