--- a/_layouts/base-NL.html
+++ b/_layouts/base-NL.html
@@ -25,6 +25,12 @@
         <div class="content">
   
           {{ content }}
+
+          {% if page.title != "thanks" %}
+
+          {% include mailchimp-nl.html %}
+
+          {% endif %}
   
         </div>
         {% endif %}
