select 0 in bus and ignore _site

--- a/_includes/mailchimp-en.html
+++ b/_includes/mailchimp-en.html
@@ -23,8 +23,7 @@
 <div class="mc-field-group">
 	<label for="mce-BUS">Seat on the bus? </label>
 	<select name="BUS" class="" id="mce-BUS">
-	<option value=""></option>
-	<option value="0">0</option>
+	<option value="0" selected>0</option>
 <option value="1">1</option>
 <option value="2">2</option>
 <option value="3">3</option>
@@ -42,7 +41,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53a27387f37f1d666940b7728_cf101d2cff" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="RSVP!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
