--- a/_layouts/base-EN.html
+++ b/_layouts/base-EN.html
@@ -42,6 +42,8 @@
 
     {% if page.title != "thanks" || page.title != "404" %}
 
+    <button id="open-popup">RSVP for our wedding</button>
+
     {% include mailchimp-en.html %}
 
     {% endif %}
