--- a/_includes/mailchimp-en.html
+++ b/_includes/mailchimp-en.html
@@ -1,8 +1,22 @@
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 <script type="text/javascript">
 function showMailingPopUp() {
-	window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us12.list-manage.com","uuid":"53a27387f37f1d666940b7728","lid":"cf101d2cff","uniqueMethods":true}) })
+	require(
+	  ["mojo/signup-forms/Loader"],
+	  function(L) {
+		L.start({"baseUrl":"mc.us12.list-manage.com","uuid":"53a27387f37f1d666940b7728","lid":"cf101d2cff","uniqueMethods":true})
+	  }
+	);
+   
+	document.cookie = 'MCPopupClosed=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
+	document.cookie = 'MCPopupSubscribed=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
+
 	console.log("load popup");
+
 }
-document.getElementById("open-popup").onclick = function() {showMailingPopUp()};
 </script>
+
+
+
+
+  
