--- a/_layouts/base-EN.html
+++ b/_layouts/base-EN.html
@@ -25,8 +25,7 @@
   
   {% if site.compass.tagline %}
   
-  <div class="RSVP"><a href="/">English</a> - <a href="/index-nl/">Nederlands</a></div>
-  <div class="RSVP"><a href="mailto:wedding@tosja-richard.com">contact masters of ceremonies</a></div>
+  <div class="RSVP">English - <a href="/index-nl/">Nederlands</a></div>
   
   {% endif %}
   
@@ -40,7 +39,7 @@
   
     {{ content }}
 
-    {% include mailchimp-en.html %}
+    {% include mailchimp.html %}
   
   </div>
   
